# iv_to_auto_bag_converter

./: .gitignore  CHANGELOG.rst  README.md  dependency.repos  package.xml  setup.cfg  setup.py
config/: topic_list.yaml
iv_to_auto_bag_converter/: converter.py  sequential_converter.py
